@@ -1,5 +1,13 @@
 2021-03-08  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-typify.c (pkl_typify1_ps_struct_type_field): Use
+	pkl_ast_type_mappable_p to decide which field types are valid.
+	* testsuite/poke.pkl/struct-types-diag-12.pk: New test.
+	* testsuite/poke.pkl/struct-types-diag-13.pk: Likewise.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
+
+2021-03-08  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* .x-sc_prohibit_path_max_allocation: New file.
 
 2021-03-08  Jose E. Marchesi  <jemarch@gnu.org>
